public/css/style.css
:root {
    --primary-color: rgb(227, 251, 227);
    --secondary-color: rgb(48, 26, 26);
    --post-header-color: rgb(155, 155, 155);
    --btn-color: rgb(109, 108, 108);
}

/* css style resets */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

html, body {
    height: 100%;
}

body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}

input, button, textarea, select {
    font: inherit;
}

/* general styling */
footer {
    height: 200px;
}

/* navigation bar */
a {
    text-decoration: none;
}

.navbar a {
    color: var(--primary-color);
    font-size: 27px;
    padding: 0 2.5rem;
}

.nav-heading {
    color: var(--secondary-color);
    background-color: var(--primary-color);
    font-size: 45px;
    font-weight: 800;
    padding: 4px 35px;
    margin-left: 2.5rem;
    margin-top: 2.5rem;
    border-radius: 15px;
    box-shadow: 8px 8px rgb(161, 158, 158);
}

header {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    background-color: var(--secondary-color);
    padding: 2rem;
    margin-bottom: 1.5rem;
}

/* styling for background color of webpage */
body {
    background-color: var(--primary-color);
}

/* blog post */
.container {
    margin: 1rem 3.5rem;
    border: 4px solid var(--secondary-color);
    display: flex;
    flex-direction: column;
}

.container-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.7rem 1rem;
    background-color: var(--secondary-color);
}

.container-header a {
    display: block;
    font-size: 1.5em;
    font-weight: bold;
    cursor: pointer;
    color: var(--primary-color);
}

.container-header a:visited, a:active {
    color: var(--post-header-color);
}

.no-vis {
    visibility: hidden;
}

.container-date {
    font-weight: 400;
    font-size: 15px;
    color: var(--post-header-color);
}

.container-content {
    font-size: 20px;
    padding: 0.7rem 1.5rem;
}

/* login styling */
.login-heading, .signup-heading, .new-post-heading {
    color: var(--primary-color);
}

.login-form, .signup-form, .new-post-form {
    font-size: 24px;
}

.form-group {
    display: flex;
    flex-direction: column;
    margin-bottom: 15px;
}

.btn {
    border: none;
    padding-top: 5px;
    padding-bottom: 5px;
    color: white;
    background-color: var(--btn-color);
    border-radius: 8px;
    cursor: pointer;
}

.login-link, .signup-link {
    display: inline;
    color: blue;
    font-size: 20px;
    cursor: pointer;
}

/* dashboard styling */
.hidden {
    display: none;
}

.center {
    display: flex;
    justify-content: center;
}

.btn-position-btm {
    position: fixed;
    bottom: 0;
    width: 100%;
    margin-bottom: 20px;
}

.new-post-btn {
    font-size: 30px;
    border: none;
    padding: 10px 25px;
    color: white;
    background-color: var(--secondary-color);
    border-radius: 8px;
    cursor: pointer;
}

.user-post {
    margin-bottom: 15px;
}

.user-post a {
    font-size: 25px;
    width: 90%;
    display: flex;
    justify-content: space-between;
    padding: 15px;
}

textarea:focus-visible, input:focus-visible {
    outline: rgb(0, 98, 255) auto 1px;
}

/* post page styling */
#login-prompt {
    font-size: 15px;
    font-weight: 400;
}

/* page-responsiveness styling */
@media (max-width: 590px) {
   .navbar a {
    padding-left: 0;
    padding-top: 10px;
   }
   .navbar {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
   }
   .nav-heading {
    margin-left: 0;
    font-size: 33px;
   }
   .container {
    margin: 1rem;
   }
   .container-header, .user-post a{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
   }
   .user-post a div:last-child {
    font-size: 18px;
   }
}

